# Mobile_Face_Recognition

./: README.md  face_distance.py
dataset/: create_imagenet.sh  create_lmdb.sh  download_data.sh  extract_images.py  extract_images.sh  make_mean.sh
model/: mobilenet_v2_deploy.prototxt
network/: mobilenet_v2_deploy.prototxt
src/: Makefile.config  train.py
src/face_detector/: CMakeLists.txt  face_detect.cpp
src/tensorrt/: Makefile  common.cpp  common.h  main.cpp
